# overkit

./: CMakeLists.txt  LICENSE.txt  OverkitSubproject.cmake  README.md
config/: OverkitConfig.cmake  OverkitDefs.cmake.in  OverkitDefs.mk.in
config/modules/: CoverageBuildType.cmake  DebugBuildType.cmake  ReleaseBuildType.cmake
config/scripts/: check-config.cmake  configure-file.cmake  copy-files.cmake  coverage-clean.cmake  coverageclean.cmake  distclean.cmake  gen-aggregate-header.cmake  gen-coverage-data.cmake  gen-coverage-report.cmake
examples/: Blobs.cpp  BoxInBox.cpp  CMakeLists.txt  Common.h  Common.hpp  Debug.c  Interface.cpp  InterfaceC.c  ReadInterp.c  Test.c
include/: overkit-extras.h  overkit.h
misc/: CMakeLists.txt  collect_profile  count_lines  coverage-report.pl  update_license
ovk/: CMakeLists.txt  overkit.h
ovk/core/: AssemblyOptions.cpp  AssemblyOptions.h  Box.h  CMakeLists.txt  Cart.h  Connectivity.c  Connectivity.h  ConnectivityD.c  ConnectivityD.h  ConnectivityR.c  ConnectivityR.h  Context.c  Context.h  Domain.c  Domain.h  ErrorHandler.c  ErrorHandler.h  Exchange.c  Exchange.h  Global.c  Global.h  Grid.c  Grid.h  List.h  Logger.c  Logger.h  MPIUtils.c  MPIUtils.h  MiscUtils.cpp  MiscUtils.h  OrderedMap.h  PartitionHash.c  PartitionHash.h  ProfileUtils.c  ProfileUtils.h  Range.h  TextUtils.h  all.h.in  ovkAssemblyOptions.h  ovkBox.h  (+14 more)
ovk/extras/: CMakeLists.txt  Global.c  Global.h  XINTOUT.c  XINTOUT.h  all.h.in  ovkGlobal.h  ovkXINTOUT.h
src/: CMakeLists.txt  overkit.h  overkit.hpp
src/core/: Array.hpp  ArrayOps.hpp  ArrayTraits.hpp  ArrayTraitsBase.hpp  ArrayView.hpp  Assembler.cpp  Assembler.h  Assembler.hpp  AssemblerAssembly.cpp  AssemblerOptions.cpp  Assembly.cpp  AssemblyOptions.cpp  AssemblyOptions.h  AssemblyOptions.hpp  AssemblyOptionsBase.h  Box.h  Box.hpp  Box.inl  BoxBase.h  BoxBase.inl  CMakeLists.txt  Cart.h  Cart.hpp  Cart.inl  CartBase.h  CartBase.inl  Collect.cpp  Collect.hpp  CollectAll.hpp  CollectAny.hpp  CollectBase.cpp  CollectBase.hpp  CollectCol.cpp  CollectInterp.hpp  CollectInterpThreaded.hpp  CollectMap.cpp  CollectMap.hpp  CollectMax.hpp  CollectMin.hpp  CollectNone.hpp  (+243 more)
src/core-c/: Assembler.cpp  Assembler.h  AssemblyOptions.cpp  AssemblyOptions.h  Box.h  CMakeLists.txt  Cart.h  Connectivity.cpp  Connectivity.h  ConnectivityComponent.cpp  ConnectivityComponent.h  ConnectivityD.cpp  ConnectivityD.h  ConnectivityM.cpp  ConnectivityM.h  ConnectivityN.cpp  ConnectivityN.h  ConnectivityR.cpp  ConnectivityR.h  Constants.h  Context.cpp  Context.h  DataType.h  Domain.cpp  Domain.h  Error.h  Exchange.cpp  Exchange.h  Exchanger.cpp  Exchanger.h  Geometry.cpp  Geometry.h  GeometryComponent.cpp  GeometryComponent.h  Global.h  Grid.cpp  Grid.h  OverlapComponent.cpp  OverlapComponent.h  OverlapM.cpp  (+11 more)
src/extras/: CMakeLists.txt  Constants.hpp  ConstantsBase.h  ConstantsBase.inl  Global.cpp  Global.h  Global.hpp  GlobalBase.h  XINTOUT.cpp  XINTOUT.h  XINTOUT.hpp  XINTOUTBase.h  all.hpp.in
src/extras-c/: CMakeLists.txt  Constants.h  Global.cpp  Global.h  XINTOUT.cpp  XINTOUT.h  all.h.in
src/support/: CMakeLists.txt
src/utils/: CMakeLists.txt
support/: CMakeLists.txt  CommandArgs.cpp  CommandArgs.h  CommandArgs.hpp  CommandArgsC.cpp  CommandArgsC.h  Constants.h  Constants.hpp  Debug.cpp  Debug.h  Debug.hpp  Decomp.cpp  Decomp.h  Decomp.hpp  Grid.cpp  Grid.hpp  XDMF.cpp  XDMF.h  XDMF.hpp  XDMFC.cpp  XDMFC.h
support/pugixml/: CMakeLists.txt
tests/: ArrayOpsTests.cpp  ArrayTests.cpp  ArrayTraitsTests.cpp  ArrayViewTests.cpp  AssemblerTests.cpp  BoxTests.cpp  CMakeLists.txt  CartTests.cpp  CommTests.cpp  ContextTests.cpp  DecompTests.cpp  DistributedFieldOpsTests.cpp  DistributedFieldTests.cpp  ElemTests.cpp  ExampleTests.cpp  ExchangerTests.cpp  ForEachTests.cpp  GeometricPrimitiveOpsTests.cpp  GeometryOpsTests.cpp  HaloTests.cpp  IDMapTests.cpp  IDSetTests.cpp  IDTests.cpp  IndexerTests.cpp  IntervalTests.cpp  MPIPrinter.hpp  MPITest.hpp  MapTests.cpp  MathTests.cpp  OptionalTests.cpp  PartitionTests.cpp  RangeTests.cpp  RequestTests.cpp  SetTests.cpp  TupleTests.cpp  UnitTestMain.cpp  VectorTests.cpp  XINTOUTTests.cpp
tests/data/XINTOUTTests/: XINTOUT_Extended2D.HO.2D  XINTOUT_Extended2D.X.2D  XINTOUT_Extended3D.HO.2D  XINTOUT_Extended3D.X.2D  XINTOUT_Standard2D.HO.2D  XINTOUT_Standard2D.X.2D  XINTOUT_Standard3D.HO.2D  XINTOUT_Standard3D.X.2D
tests/fixtures/: CylinderInCylinder.cpp  CylinderInCylinder.hpp  Interface.cpp  Interface.hpp  WavyInWavy.cpp  WavyInWavy.hpp
tests/mocks/: MultidimArray.hpp  Noncopyable.hpp  Nondefaultconstructible.hpp
utils/: CMakeLists.txt
